cekilisler.html fatura-detay.html hakkimizda.html ilan-knight-item-detay.html ilanlar.html ilan-rise-item-detay.html iletisim.html login.html register.html satici-detay.html satici-profil.html
Güncellendi.

--- a/ilanlar.html
+++ b/ilanlar.html
@@ -244,6 +244,7 @@
               <option value="">Azalan Fiyat</option>
             </select>
           </div>
+          <div class="row">
           <!-- Rise Online İtem Satış -->
           <div class="col-md-4">
             <div class="advert-page-content-item">
@@ -350,7 +351,7 @@
                 </div>
                 <div class="item-durability">Durability: 14000 / 14000 (100%) <span></span></div>
               </div>
-                <ul>
+                <ul class="knight-online-ul">
                   <li>Attack Power : 188 </li>
                   <li>Attack Speed : Very Slow </li>
                   <li class="color-green">Poison Damage : 75 </li>
@@ -496,6 +497,36 @@
             </div>
           </div>
           <!-- Knight Online Hesap Satış END-->
+          <!-- Knight Online Hesap Satış-->
+          <div class="col-md-4">
+            <div class="advert-page-content-item">
+            <a href="#">
+              <div class="item-title">Galia</div>
+              <div class="gb-sell">
+                  <img src="assets/images/zero-gb.webp" alt="">
+                  <div class="new-item">Yeni İlan</div>
+                  <div class="vitrin-item">Vitrin İlanı</div>
+              </div>
+                <div class="seller-info">
+                  <div class="seller-name">
+                    <img src="assets/images/gamer.png" alt="">
+                    <span>satici-29203</span>
+                    <span>
+                      <i class="fas fa-star active"></i>
+                      <i class="fas fa-star active"></i>
+                      <i class="fas fa-star active"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <b>(2)</b>
+                    </span>
+                  </div>
+                  <div class="item-price">5.500 ₺</div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- Knight Online Hesap Satış END-->
+        </div>
         </div>
       </div>
     </div>
